RecommendationService/base/service-recommendationservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  selector:
    app: recommendationservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
